# qmsgpack

./: .gitignore  .qmake.conf  .travis.yml  CMakeLists.txt  LICENSE  PVS_HOWTO  README.md  cmake_uninstall.cmake.in  main.cpp  msgpack-qt.pro  msgpack.cpp  msgpack.h  msgpack.org.md  msgpack_common.h  qmsgpack.pri  qmsgpack.pro
doc/: Makefile  basics.rst  conf.py  custom.rst  index.rst  install.rst  sphinx_deployment.mk  stream.rst
doc/_themes/: sphinx_rtd_theme
private/: msgpack_p.cpp  msgpack_p.h  pack_p.cpp  pack_p.h  types.gnumeric  unpack_p.cpp  unpack_p.h
src/: CMakeLists.txt  CMakeLists.txt~  endianhelper.h  main.cpp  msgpack-qt.pro  msgpack.cpp  msgpack.h  msgpack_common.cpp  msgpack_common.h  msgpack_common.h.in  msgpack_export.h  msgpack_ext.cpp  msgpack_ext.h  msgpackcommon.cpp  msgpackcommon.h  msgpackcommon.h.in  msgpackstream.cpp  msgpackstream.h  src.pro  stream.cpp  stream.h
src/private/: pack_p.cpp  pack_p.h  qt_types_p.cpp  qt_types_p.h  sysdep.h  unpack_p.cpp  unpack_p.h
src/stream/: datetime.cpp  datetime.h  geometry.cpp  geometry.h  location.cpp  location.h  time.cpp  time.h
test/pack/pack-test/: pack-test.pro  tst_d.cpp
tests/: CMakeLists.txt  tests.pri  tests.pro
tests/big/: CMakeLists.txt  big.cpp
tests/ext/: CMakeLists.txt  ext_test.cpp
tests/mixed/: CMakeLists.txt  mixed.pro  mixed_test.cpp
tests/pack/: CMakeLists.txt  pack-test.pro  pack.pro  pack_test.cpp  pack_test.cpp.autosave
tests/qttypes/: CMakeLists.txt  qttypes.pro  qttypes_test.cpp
tests/stream/: CMakeLists.txt  stream.pro  stream_test.cpp
tests/unpack/: CMakeLists.txt  unpack.pro  unpack_test.cpp
